--- a/index.html
+++ b/index.html
@@ -1750,13 +1750,14 @@ function initApp() {
     };
     
     // Глобальные функции для onclick
-    window.switchChannel = switchChannel;
-    window.toggleTheme = toggleTheme;
-    window.toggleDropdown = toggleDropdown;
-    window.showProfile = showProfile;
-    window.showLoginForm = showLoginForm;
-    window.showRegisterForm = showRegisterForm;
-    window.logout = logout;
+    // Глобальные функции для onclick
+  window.switchChannel = switchChannel;
+  window.toggleTheme = toggleTheme;
+  window.toggleDropdown = toggleDropdown;
+  window.showProfile = showProfile;
+  window.showLoginForm = showLoginForm;  
+  window.showRegisterForm = showRegisterForm;
+  window.logout = logout;
     </script>
 </body>
 </html>
